Fixed: Overlapping Columns and unwanted scrollbar

--- a/app/styles/cells.less
+++ b/app/styles/cells.less
@@ -3,7 +3,6 @@
 .hypertable__cell {
   border-bottom: 1px solid lighten(@upf-gray, 15%);
   border-left: 1px solid lighten(@upf-gray, 15%);
-  border-right: 1px solid lighten(@upf-gray, 15%);
   display: flex;
   align-items: center;
   background-color: white;
@@ -11,7 +10,7 @@
   height: @cell-height;
   max-height: @cell-height;
   padding: @spacing-xx-sm;
-  width: calc(100% + 2px);
+  width: 100%;
 
   .tooltip > .tooltip-inner {
     padding: 5px;
